# TicTacToe

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.py
app/: __init__.py  init_db.py  main.py
app/api/: __init__.py  auth.py  games.py
app/config/: __init__.py
app/crud/: __init__.py  game_crud.py  move_crud.py  user_crud.py
app/engine/: __init__.py  base.py  session.py
app/model/: __init__.py  game.py  move.py  user.py
app/schema/: __init__.py  gameDto.py  moveDto.py  userDto.py
app/services/: __init__.py  game_service.py  move_service.py  user_service.py
tests/: conftest.py
tests/api/: test_auth_api.py  test_games_api.py
tests/crud/: test_game_crud.py  test_move_crud.py  test_user_crud.py
tests/engine/: test_base.py  test_session.py
tests/model/: test_game.py  test_move.py  test_user.py
tests/schema/: test_gameDto.py  test_moveDto.py  test_userDto.py
tests/services/: test_game_service.py  test_move_service.py  test_user_service.py
